# bootqt

./: .gitignore  CHANGELOG.md  README.md  bootqt.py  meson.build
BootqtFlatpak/: bootqt-flatpakversion.py  bootqt.sh  com.github.giantpinkrobots.bootqt.yml
bqi18n/: da.py  de.py  eo.py  es.py  frca.py  it.po  it.py  ja.py  ptbr.py  tr.py  uk.py  zhcn.py  zhtw.py
data/: bootqt-launch.sh.in  io.github.giantpinkrobots.bootqt.desktop
flatpak/: bootqt.py  bootqt.sh  io.github.giantpinkrobots.bootqt.desktop  io.github.giantpinkrobots.bootqt.metainfo.xml  io.github.giantpinkrobots.bootqt.yml
